# automatex-notifier-axum

./: .env.example  .gitignore  Cargo.toml  README.md  seen_launches.json  seen_quakes.json  seen_space_weather.json
src/: config.rs  main.rs  state.rs  telegram.rs
src/services/: earthquake.rs  mod.rs  rocketlaunch.rs  spaceweather.rs  vulnerability.rs
